--- a/src/template.html
+++ b/src/template.html
@@ -51,7 +51,7 @@
                 <input type="text" class="toc-input" />
                 <ul>
                     <li>
-                        <a href="index.html">Início</a>
+                        <a href="index.html">Exercícios de Web Security</a>
                     </li>
                 </ul>
                 $table-of-contents$
